locust/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: locust-ingress
  namespace: default
  
spec:
  ingressClassName: cilium
  rules:
  - host: locust.10.190.238.240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: locust
            port:
              number: 8089
---
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: argocd-ingress
  namespace: argocd
  
spec:
  ingressClassName: cilium
  rules:
  - host: argocd.10.190.238.240.nip.io
    http:
      paths:
      - path: /
        pathType: Prefix
        backend:
          service:
            name: argocd-server
            port:
              number: 80
